refactor: 数据源插件优化